Reports/Experiment_Data_Thu_Sep_21_11:14:18_UTC_2017/Performance_Results/file-input-output/python.txt
Traceback (most recent call last):
  File "/home/sgeorgiou/GitHub/Rosetta_Code_Research_MSR/Scripts/temp//file-input-output/python/file-input-output.py", line 3, in <module>
    infile = open('../input.txt', 'r')
IOError: [Errno 2] No such file or directory: '../input.txt'

real	0m0.045s
user	0m0.026s
sys	0m0.016s
  File "/home/sgeorgiou/GitHub/Rosetta_Code_Research_MSR/Scripts/temp//file-input-output/python/output.txt", line 1
    The Republic By Plato
               ^
SyntaxError: invalid syntax

real	0m0.017s
user	0m0.013s
sys	0m0.001s
